applications/keycloak/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - keycloak.${K_INFRA_NAME}.${K_ZONE_NAME}
      secretName: keycloak-tls
  rules:
  - host: keycloak.${K_INFRA_NAME}.${K_ZONE_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              name: http
